Some support for CMS collector logs